# forgeflow-data-platform

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  DECISIONS.md  Dockerfile  IMPLEMENTATION_PLAN.md  Makefile  PORTFOLIO.md  PROJECT_SPEC.md  QUALITY_RUBRIC.md  README.md  STATUS.md  compose.yaml  dagster.yaml  pyproject.toml  workspace.yaml
.github/workflows/: ci.yml
dbt/: dbt_project.yml  profiles.yml  selectors.yml
dbt/docs/: metric_definitions.md
dbt/macros/: incremental_event_time_filter.sql
dbt/macros/tests/: end_after_start.sql
dbt/models/marts/: dim_factory.sql  dim_machine.sql  dim_production_line.sql  fct_downtime.sql  fct_machine_telemetry_daily.sql  fct_production_output.sql  fct_quality_inspections.sql  mart_data_freshness.sql  mart_data_quality_trends.sql  mart_downtime_by_reason.sql  mart_factory_performance.sql  mart_inspection_outcomes.sql  mart_machine_reliability.sql  mart_maintenance_backlog.sql  schema.yml
dbt/models/staging/: schema.yml  sources.yml  stg_downtime_events.sql  stg_factories.sql  stg_machine_telemetry.sql  stg_machines.sql  stg_maintenance_work_orders.sql  stg_product_defects.sql  stg_production_lines.sql  stg_production_orders.sql  stg_quality_inspections.sql  stg_shifts.sql
dbt/snapshots/: machine_history.sql  schema.yml
dbt/tests/: assert_actual_quantity_within_plan.sql  assert_inspection_counts_reconcile.sql
docs/: architecture.md  data-contracts.md  data-model.md  demo-walkthrough.md  mcp.md  observability.md  production-considerations.md  threat-model.md  troubleshooting.md
docs/decisions/: 001-postgresql-system-of-record.md  002-minio-raw-landing.md  003-dagster-orchestration.md  004-dbt-transformations.md  005-deterministic-explanations.md  006-defer-streaming.md  007-shared-service-layer.md  008-finalize-failed-runs.md  009-poe-cross-platform-tasks.md  010-optional-openai-provider.md
infra/postgres/init/: 001_schemas.sql  002_observability.sql  003_raw_tables.sql  004_readonly_role.sql
src/forgeflow/: __init__.py  api.py  cli.py  config.py  contracts.py  dagster_defs.py  dashboard.py  dbt_runner.py  errors.py  incident.py  logging.py  mcp_server.py  models.py  object_store.py  pipeline.py  service.py  synthetic.py  warehouse.py
tests/integration/: test_platform_integration.py
tests/unit/: test_api.py  test_cli.py  test_contracts.py  test_dbt_runner.py  test_incident.py  test_logging.py  test_mcp_server.py  test_object_store.py  test_pipeline.py  test_service.py  test_synthetic.py  test_warehouse.py
